[WHD-235] Feat: Change group update logic